# Deusch-Adjektiv-Endung

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  extrahieren.py  german_nouns.json  wp.cabal
app/: DeclensionRules.hs  Main.hs  Parser.hs  Prozess.hs  Types.hs  Utils.hs  Validate.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/: Spec.hs
