cabal-version:      3.0
name:               wp
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             zijian ying
maintainer:         z.ying@ostfalia.de
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable wp
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings  
    build-depends:    base ^>= 4.16.4.0,
                     random >= 1.2.0,
                     split >= 0.2,
                     text,
                     aeson,
                     bytestring
    ghc-options:      -Wall
                     -fwarn-incomplete-patterns