cabal-version: 3.0
name: wp
version: 0.1.0.0
license: BSD-2-Clause
license-file: LICENSE
author: zijian ying
maintainer: z.ying@ostfalia.de
category: Game
build-type: Simple
extra-doc-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  build-depends:    base ^>= 4.16.4.0,
                    text,
                    aeson,
                    bytestring
  ghc-options: -Wall -fwarn-incomplete-patterns

executable wp
  import: shared-properties
  main-is: Main.hs
  other-modules: Types
                Utils
                Parser
                DeclensionRules
                Prozess
  hs-source-dirs: app

test-suite wp-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Types
                Utils
                Parser
                DeclensionRules
                Prozess
  hs-source-dirs: test, app
  build-depends: base,
                hspec >= 2.7.1